use fixed height for map and menu, add overflow y scroll to map menu

--- a/redesign/src/map/Map.css
+++ b/redesign/src/map/Map.css
@@ -1,5 +1,5 @@
 .leaflet-container {
-    height: 80vh;
+    height: 100%;
 }
 
 .cluster-icon {
